src/test/deca/context/valid/op_bin.deca
{
float x = 3 + 4.5 * 10 - 3.2 / 3;
print(x);
}

