src/test/deca/context/invalid/if_minus_float.deca
/*
    Description : Utilisation d'un minus float au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x;
    if (-2.0){
        x = 2;
    }
}
